Removed jScrollPane dependency in Popup. Created triggers that are caught in navigator.js to reinitialize the popup jScrollPane. Fixed list z-index in settings.less. Fixed click handler use case where clicks were still being caught by the popupWrapper. Created a file to test popup abstraction and show jScrollPane integration. Started transferring popup related styling to popup.less.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -288,6 +288,7 @@ zoom: 1;*/
     height: 100%;
     width: 305px;
     padding-top: @navHeight+@popupCarrotHeight - 4;
+    visibility: hidden;
 }
 
 #popup {
@@ -297,6 +298,7 @@ zoom: 1;*/
     width: 100%;
     z-index: 2;
     color: @charcoal;
+    visibility: visible;
 
     a {
         color: @charcoal;
